k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vanilla-forums
  labels:
    name: vanilla-forums
    app: vanilla-forums
